		ADDED - LABELFONTCOLOR can use a special value of 'contrast' to always contrast with the label colour.
		ADDED - Artificial Icons. Special icon 'filenames' - 'box' 'round' 'rbox' create a shaped icon without any file.
		ADDED - Map titles show up in browser title now.
		ADDED - a basic 'live view' function which generates a map on demand. Sometimes. It's not very useful.
	ADDED - improved data-source picker in editor: host filter
	ADDED - improved data-source picker in editor: option to aggregate data sources
	ADDED - Moved data-source picker changes across into the graph-picker for NODEs too.
	ADDED - SPLITPOS keyword to control position of midpoint in links
	ADDED - VIAs can be positioned relative to NODEs (like NODEs can) (thanks again to llow) 
	ADDED - Weathermap has a hook in the map viewing page to allow other plugins to add code there
	ADDED - .htaccess files bundled with Weathermap to restrict direct access to configs and output
	ADDED - filenames for output are much less guessable now
	ADDED - You can use 'DUPLEX half' on a link to make the bandwidth percentage
	        calculate work for half-duplex links
	ADDED - ININFOURL/OUTINFOURL, INOVERLIBGRAPH/OUTOVERLIBGRAPH, INNOTES/OUTNOTES 
	        allow you to have different urls for the in and out side of links (based on idea from llow)
	ADDED - OVERLIBGRAPH (and IN/OUT versions) can take multiple URLs separated by spaces (again from idea by llow)
	ADDED - debug/warning log output contains the map name, and the debug output is marked DEBUG
	ADDED - debug log output contains the calling function, file/line number, too. Making debugging-by-mail easier.
	ADDED - fping: TARGET to do live pings of devices
	ADDED - a sample 'skeleton' DS plugin
	ADDED - an additional check-gdbug.php to spot bad GD installs
	CHANGE - DS plugins are able to return negative results now ***breaks user-developed DS plugins***
	CHANGE - the scale: prefix for the RRD DS plugin can take negative scale factors