@@ -6,6 +6,7 @@
 		ADDED - Artificial Icons. Special icon 'filenames' - 'box' 'round' 'rbox' create a shaped icon without any file.
 		ADDED - Map titles show up in browser title now.
 		ADDED - a basic 'live view' function which generates a map on demand. Sometimes. It's not very useful.
+		ADDED - LABELANGLE allows you to rotate node labels to 90,180,270 degrees. Needs truetype font.
 	ADDED - improved data-source picker in editor: host filter
 	ADDED - improved data-source picker in editor: option to aggregate data sources
 	ADDED - Moved data-source picker changes across into the graph-picker for NODEs too.
